fix bizzare horizontal scrollbar

--- a/less/g0v.less
+++ b/less/g0v.less
@@ -149,7 +149,6 @@ body {
 
 #footer {
   height: 200px;
-  width: 100%;
   color: @grayLight;
   background: #000;
   margin: 30px 0 0 0;
